k8s/base/laravel-rollout.yaml
apiVersion: argoproj.io/v1alpha1 
kind: Rollout
metadata:
  name: laravel-rollout
  
spec:
  replicas: 4
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
      - name: laravel
        image: imagegalary:latest 
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
        resources:
          requests:
            cpu: "200m"   
            memory: "256Mi"
          limits:  
            cpu: "300m"  
            memory: "384Mi"
        ports:
        - containerPort: 80
  strategy:
    canary:
      steps:
      - setWeight: 25 
      - pause: {duration: 1m} 
      - analysis: 
          templates:
          - templateName: success-rate
      - setWeight: 50
      - pause: {}
