k8s/base/laravel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service 
spec:
  selector:
    app: laravel       
  ports:
    - protocol: TCP
      port: 80         
      targetPort: 80
  type: ClusterIP
