k8s/base/laravel.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
spec:
  selector:
    app: laravel
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-app
spec:
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
      - name: laravel
        image: imagegalary:latest 
        resources:
          requests:
            cpu: "100m"   
            memory: "256Mi"
          limits:  
            cpu: "500m"   
            memory: "512Mi"
        ports:
        - containerPort: 80
