k8s/base/egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: imagegalary-test   
spec:
  podSelector: {}              
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              purpose: infra      
          podSelector:
            matchLabels:
              k8s-app: kube-dns   
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
