k8s/base/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-zero-trust
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: laravel 
    ports:
    - protocol: TCP
      port: 5432
---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: minio-zero-trust
   #
spec:
  podSelector:
    matchLabels:
      app: minio
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: laravel
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx 
    ports:
    - protocol: TCP
      port: 9000
